[package]
name = "rust"
version = "0.1.0"
authors = ["Zengor <ialmeida@edu.unifor.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "adventofcode2019"
path = "src/main.rs"

[lib]
name = "adventofcode2019"
path = "src/lib.rs"

[dependencies]
itertools = "0.8.2"
petgraph = "0.4"